k8s/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-toolkit
  labels:
    app: devops-toolkit
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: devops-toolkit
           port:
             number: 80
    host: devopstoolkitseries.com
